@@ -109,49 +109,6 @@ specifier|final
 name|AttributeImpl
 name|tokenAtt
 decl_stmt|;
-DECL|field|TOKEN_ATTRIBUTE_FACTORY
-specifier|private
-specifier|static
-specifier|final
-name|AttributeFactory
-name|TOKEN_ATTRIBUTE_FACTORY
-init|=
-operator|new
-name|AttributeFactory
-argument_list|()
-block|{
-specifier|public
-name|AttributeImpl
-name|createAttributeInstance
-parameter_list|(
-name|Class
-name|attClass
-parameter_list|)
-block|{
-return|return
-name|attClass
-operator|.
-name|isAssignableFrom
-argument_list|(
-name|Token
-operator|.
-name|class
-argument_list|)
-condition|?
-operator|new
-name|Token
-argument_list|()
-else|:
-name|DEFAULT_ATTRIBUTE_FACTORY
-operator|.
-name|createAttributeInstance
-argument_list|(
-name|attClass
-argument_list|)
-return|;
-block|}
-block|}
-decl_stmt|;
 DECL|method|SingleTokenTokenStream
 specifier|public
 name|SingleTokenTokenStream
@@ -162,6 +119,8 @@ parameter_list|)
 block|{
 name|super
 argument_list|(
+name|Token
+operator|.
 name|TOKEN_ATTRIBUTE_FACTORY
 argument_list|)
 expr_stmt|;
