@@ -99,6 +99,21 @@ name|apache
 operator|.
 name|lucene
 operator|.
+name|analysis
+operator|.
+name|tokenattributes
+operator|.
+name|TermAttribute
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
 name|search
 operator|.
 name|BooleanQuery
@@ -117,6 +132,19 @@ operator|.
 name|BooleanClause
 operator|.
 name|Occur
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
+name|AttributeImpl
 import|;
 end_import
 begin_class
@@ -2374,28 +2402,31 @@ name|Reader
 name|reader
 parameter_list|)
 block|{
-specifier|final
-name|Token
-name|reusableToken
-init|=
-operator|new
-name|Token
-argument_list|()
-decl_stmt|;
-name|TokenStream
-operator|.
-name|setOnlyUseNewAPI
-argument_list|(
-literal|true
-argument_list|)
-expr_stmt|;
 name|TokenStream
 name|ts
 init|=
 operator|new
 name|TokenStream
-argument_list|()
+argument_list|(
+name|Token
+operator|.
+name|TOKEN_ATTRIBUTE_FACTORY
+argument_list|)
 block|{
+specifier|final
+name|AttributeImpl
+name|reusableToken
+init|=
+operator|(
+name|AttributeImpl
+operator|)
+name|addAttribute
+argument_list|(
+name|TermAttribute
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
 name|int
 name|p
 init|=
@@ -2419,6 +2450,9 @@ condition|)
 return|return
 literal|false
 return|;
+name|clearAttributes
+argument_list|()
+expr_stmt|;
 name|tokens
 index|[
 name|p
@@ -2436,13 +2470,6 @@ return|;
 block|}
 block|}
 decl_stmt|;
-name|ts
-operator|.
-name|addAttributeImpl
-argument_list|(
-name|reusableToken
-argument_list|)
-expr_stmt|;
 return|return
 name|ts
 return|;
