@@ -366,7 +366,7 @@ name|lucene
 operator|.
 name|util
 operator|.
-name|AttributeSource
+name|AttributeImpl
 import|;
 end_import
 begin_comment
@@ -1368,21 +1368,31 @@ literal|9
 argument_list|)
 argument_list|)
 expr_stmt|;
-specifier|final
-name|Token
-name|reusableToken
-init|=
-operator|new
-name|Token
-argument_list|()
-decl_stmt|;
 name|TokenStream
 name|ts
 init|=
 operator|new
 name|TokenStream
-argument_list|()
+argument_list|(
+name|Token
+operator|.
+name|TOKEN_ATTRIBUTE_FACTORY
+argument_list|)
 block|{
+specifier|final
+name|AttributeImpl
+name|reusableToken
+init|=
+operator|(
+name|AttributeImpl
+operator|)
+name|addAttribute
+argument_list|(
+name|TermAttribute
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
 name|Iterator
 argument_list|<
 name|Token
@@ -1415,14 +1425,17 @@ return|return
 literal|false
 return|;
 block|}
-name|reusableToken
-operator|.
-name|reinit
-argument_list|(
+name|clearAttributes
+argument_list|()
+expr_stmt|;
 name|it
 operator|.
 name|next
 argument_list|()
+operator|.
+name|copyTo
+argument_list|(
+name|reusableToken
 argument_list|)
 expr_stmt|;
 return|return
@@ -1446,13 +1459,6 @@ expr_stmt|;
 block|}
 block|}
 decl_stmt|;
-name|ts
-operator|.
-name|addAttributeImpl
-argument_list|(
-name|reusableToken
-argument_list|)
-expr_stmt|;
 name|document
 operator|.
 name|add
