@@ -169,6 +169,19 @@ name|lucene
 operator|.
 name|util
 operator|.
+name|AttributeSource
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
 name|AttributeImpl
 import|;
 end_import
@@ -2632,6 +2645,167 @@ argument_list|(
 name|type
 argument_list|)
 expr_stmt|;
+block|}
+block|}
+comment|/** Convenience factory that returns<code>Token</code> as implementation for the basic    * attributes and return the default impl (with&quot;Impl&quot; appended) for all other    * attributes.    * @since 3.0    */
+DECL|field|TOKEN_ATTRIBUTE_FACTORY
+specifier|public
+specifier|static
+specifier|final
+name|AttributeSource
+operator|.
+name|AttributeFactory
+name|TOKEN_ATTRIBUTE_FACTORY
+init|=
+operator|new
+name|TokenAttributeFactory
+argument_list|(
+name|AttributeSource
+operator|.
+name|AttributeFactory
+operator|.
+name|DEFAULT_ATTRIBUTE_FACTORY
+argument_list|)
+decl_stmt|;
+comment|/**<b>Expert:</b> Creates a TokenAttributeFactory returning {@link Token} as instance for the basic attributes    * and for all other attributes calls the given delegate factory.    * @since 3.0    */
+DECL|class|TokenAttributeFactory
+specifier|public
+specifier|static
+specifier|final
+class|class
+name|TokenAttributeFactory
+extends|extends
+name|AttributeSource
+operator|.
+name|AttributeFactory
+block|{
+DECL|field|delegate
+specifier|private
+specifier|final
+name|AttributeSource
+operator|.
+name|AttributeFactory
+name|delegate
+decl_stmt|;
+comment|/**<b>Expert</b>: Creates an AttributeFactory returning {@link Token} as instance for the basic attributes      * and for all other attributes calls the given delegate factory. */
+DECL|method|TokenAttributeFactory
+specifier|public
+name|TokenAttributeFactory
+parameter_list|(
+name|AttributeSource
+operator|.
+name|AttributeFactory
+name|delegate
+parameter_list|)
+block|{
+name|this
+operator|.
+name|delegate
+operator|=
+name|delegate
+expr_stmt|;
+block|}
+DECL|method|createAttributeInstance
+specifier|public
+name|AttributeImpl
+name|createAttributeInstance
+parameter_list|(
+name|Class
+argument_list|<
+name|?
+extends|extends
+name|Attribute
+argument_list|>
+name|attClass
+parameter_list|)
+block|{
+return|return
+name|attClass
+operator|.
+name|isAssignableFrom
+argument_list|(
+name|Token
+operator|.
+name|class
+argument_list|)
+condition|?
+operator|new
+name|Token
+argument_list|()
+else|:
+name|delegate
+operator|.
+name|createAttributeInstance
+argument_list|(
+name|attClass
+argument_list|)
+return|;
+block|}
+DECL|method|equals
+specifier|public
+name|boolean
+name|equals
+parameter_list|(
+name|Object
+name|other
+parameter_list|)
+block|{
+if|if
+condition|(
+name|this
+operator|==
+name|other
+condition|)
+return|return
+literal|true
+return|;
+if|if
+condition|(
+name|other
+operator|instanceof
+name|TokenAttributeFactory
+condition|)
+block|{
+specifier|final
+name|TokenAttributeFactory
+name|af
+init|=
+operator|(
+name|TokenAttributeFactory
+operator|)
+name|other
+decl_stmt|;
+return|return
+name|this
+operator|.
+name|delegate
+operator|.
+name|equals
+argument_list|(
+name|af
+operator|.
+name|delegate
+argument_list|)
+return|;
+block|}
+return|return
+literal|false
+return|;
+block|}
+DECL|method|hashCode
+specifier|public
+name|int
+name|hashCode
+parameter_list|()
+block|{
+return|return
+name|delegate
+operator|.
+name|hashCode
+argument_list|()
+operator|^
+literal|0x0a45aa31
+return|;
 block|}
 block|}
 block|}
